commit note and practice

--- a/csscheatsheet/index.html
+++ b/csscheatsheet/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>CSS Cheat Sheet</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>CSS Cheat Sheet</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
+</head>
+
+<body>
+  <div class="container">
     <div class="box-1">
       <h1>Hello World</h1>
       <p>
         Hi, I am Robert, nice to meet you. How's going today? yeah, pretty good
       </p>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
