--- a/csscheatsheet/index.html
+++ b/csscheatsheet/index.html
@@ -11,13 +11,90 @@
 
 <body>
   <div class="container">
+
+
+
     <div class="box-1">
       <h1>Hello World</h1>
       <p>
         Hi, I am Robert, nice to meet you. How's going today? yeah, pretty good
       </p>
     </div>
+    <div class="box-2">
+      <h1>Goodbye World</h1>
+      <p>
+        Hi, I am Robert, nice to meet you. How's going today? yeah, pretty good
+      </p>
+    </div>
+    <div class="categories">
+      <h2>Categories</h2>
+      <ul>
+        <li><a href="">Category1</a></li>
+        <li><a href="">Category2</a></li>
+        <li><a href="">Category3</a></li>
+        <li><a href="">Category4</a></li>
+      </ul>
+    </div>
+    <form class="my-form">
+      <div class="form-group">
+        <label>Name:</label>
+        <input type="text" name="name">
+      </div>
+      <div class="form-group">
+        <label>Email:</label>
+        <input type="text" name="email">
+      </div>
+      <div class="form-group">
+
+        <label>Message:</label>
+        <textarea name="message"></textarea>
+      </div>
+      <input type="submit" class="button" value="Submit">
+    </form>
+    <div class="block">
+      <h3>Heading</h3>
+      <p>jfdklsajfklajfljHIifodajfjdnkc
+        fdjaslkjflasjfklasjflsaf
+        dsajkfljalfjl
+      </p>
+    </div>
+    <div class="block">
+      <h3>Heading</h3>
+      <p>jfdklsajfklajfljHIifodajfjdnkc
+        fdjaslkjflasjfklasjflsaf
+        dsajkfljalfjl
+      </p>
+    </div>
+    <div class="block">
+      <h3>Heading</h3>
+      <p>jfdklsajfklajfljHIifodajfjdnkc
+        fdjaslkjflasjfklasjflsaf
+        dsajkfljalfjl
+      </p>
+    </div>
+
+    <div id="main-block">
+      <h3>Heading</h3>
+      <p>jfdklsajfklajfljHIifodajfjdnkc
+        fdjaslkjflasjfklasjflsaf
+        dsajkfljalfjl
+      </p>
+    </div>
+    <div id="sidebar">
+      <h3>Heading</h3>
+      <p>jfdklsajfklajfljHIifodajfjdnkc
+        fdjaslkjflasjfklasjflsaf
+        dsajkfljalfjl
+      </p>
+    </div>
+
+    <div class="clr"></div>
+    <div class="p-box">
+      <h1>Hello</h1>
+      <p>Goodby</p>
+    </div>
   </div>
+  <a href="" class="fix-me button">Hello</a>
 </body>
 
 </html>
